<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="toppings">TOPPINGS</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">QUANTITY</string>
    <string name="plus">+</string>
    <string name="initial_quantity_value">2</string>
    <string name="subtract">-</string>
    <string name="order">Order</string>
    <string name="name">Name</string>
    <string name="mai_to">mailto:</string>
    <string name="order_summary_name">"JustJava Coffee Shop summary for " <xliff:g id="name" example="Amy">%s</xliff:g> </string>
    <string name="send_email">Send Email</string>
    <string name="text_type">text/html</string>
    <string name="toast_max">You can\'t order more than 100 cup of coffees</string>
    <string name="order_summary_whipped_cream">"Add whipped Cream? "</string>
    <string name="order_summary_chocolate">"Add Chocolate? "</string>
    <string name="order_summary_quantity">"Quantity: "</string>
    <string name="order_summary_price">"Total: "<xliff:g id="price" example="$10">%s</xliff:g> </string>
    <string name="thank_you">Thank you!</string>
</resources>
